[gd_scene load_steps=4 format=2]

[ext_resource path="res://examples/scenes/detailed_scene_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://examples/scenes/advertisement.gd" type="Script" id=2]
[ext_resource path="res://examples/fonts/default_font.tres" type="DynamicFont" id=3]

[node name="Advertisement" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="." index="1"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 90.0
margin_right = -20.0
margin_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2" index="0"]
margin_right = 920.0
margin_bottom = 430.0
custom_constants/separation = 20

[node name="IsBannerSupported" type="Label" parent="MarginContainer2/VBoxContainer" index="0"]
margin_right = 920.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Is Banner Supported:"

[node name="BannerState" type="Label" parent="MarginContainer2/VBoxContainer" index="1"]
margin_top = 48.0
margin_right = 920.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 3 )
text = "Last Banner States:"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/VBoxContainer" index="2"]
margin_top = 96.0
margin_right = 920.0
margin_bottom = 146.0
custom_constants/separation = 20

[node name="ShowBannerButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer2" index="0"]
margin_right = 135.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Show Banner"

[node name="HideBannerButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer2" index="1"]
margin_left = 155.0
margin_right = 282.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Hide Banner"

[node name="MinimumDelay" type="Label" parent="MarginContainer2/VBoxContainer" index="3"]
margin_top = 166.0
margin_right = 920.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 3 )
text = "Minimum Delay Between Interstitials:"

[node name="InterstitialState" type="Label" parent="MarginContainer2/VBoxContainer" index="4"]
margin_top = 214.0
margin_right = 920.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 3 )
text = "Last Interstitial States:"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer2/VBoxContainer" index="5"]
margin_top = 262.0
margin_right = 920.0
margin_bottom = 312.0
custom_constants/separation = 20

[node name="ShowInterstitialButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer3" index="0"]
margin_right = 163.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Show Interstitial"

[node name="ShowInterstitialIgnoreDelayButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer3" index="1"]
margin_left = 183.0
margin_right = 482.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Show Interstitial (Ignore Delay)"

[node name="RewardedState" type="Label" parent="MarginContainer2/VBoxContainer" index="6"]
margin_top = 332.0
margin_right = 920.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 3 )
text = "Last Rewarded States:"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer2/VBoxContainer" index="7"]
margin_top = 380.0
margin_right = 920.0
margin_bottom = 430.0
custom_constants/separation = 20

[node name="ShowRewardedButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer4" index="0"]
margin_right = 161.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Show Rewarded"

[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer2/ShowBannerButton" to="." method="_on_show_banner_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer2/HideBannerButton" to="." method="_on_hide_banner_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer3/ShowInterstitialButton" to="." method="_on_show_interstitial_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer3/ShowInterstitialIgnoreDelayButton" to="." method="_on_show_interstitial_ignore_delay_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer4/ShowRewardedButton" to="." method="_on_show_rewarded_button_pressed"]
